--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
         "lsky",
         "lsky Pro"
     ],
-    "homepage": "http://lsys.wispx.cn/",
-    "license": "GPL-3.0-only",
+    "homepage": "http://lsky.wispx.cn/",
+    "license": "GPL-3.0",
     "authors": [
         {
             "name": "Wisp X",
