--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "lsky",
         "lsky Pro"
     ],
-    "homepage": "http://lsky.wispx.cn/",
+    "homepage": "https://www.lsky.pro",
     "license": "GPL-3.0",
     "authors": [
         {
