:sparkles: 重构安装方式

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 [app]
 debug = false
 trace = false
+
+[database]
+hostname = {hostname}
+database = {database}
+username = {username}
+password = {password}
+hostport = {hostport}
+charset = utf8mb4
+prefix = lsky_
