:sparkles: 增加图片自定义额外参数功能

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ password = {password}
 hostport = {hostport}
 charset = utf8mb4
 prefix = lsky_
+
+[system]
+intercept_salacity = false
+url_query = ''
