--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['#-%E6%8D%90%E8%B5%A0']
+custom: https://github.com/wisp-x/lsky-pro#-%E6%8D%90%E8%B5%A0
