--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bensampo/laravel-enum": "^4.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.4",
+        "intervention/image": "^2.7",
         "laravel/breeze": "^1.5",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
