--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -11,5 +11,6 @@
     "/js/justified-gallery/jquery.justifiedGallery.min.js": "/js/justified-gallery/jquery.justifiedGallery.min.js",
     "/css/viewer-js/viewer.min.css": "/css/viewer-js/viewer.min.css",
     "/js/viewer-js/viewer.min.js": "/js/viewer-js/viewer.min.js",
-    "/js/clipboard/clipboard.min.js": "/js/clipboard/clipboard.min.js"
+    "/js/clipboard/clipboard.min.js": "/js/clipboard/clipboard.min.js",
+    "/js/dragselect/ds.min.js": "/js/dragselect/ds.min.js"
 }
