--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "resolve-url-loader": "^4.0.0",
         "tailwindcss": "^3.0.0",
         "toastr": "^2.1.4",
-        "viewerjs": "^1.10.2"
+        "viewerjs": "^1.10.2",
+        "sweetalert2": "^11.3.3"
     }
 }
