--- a/composer.json
+++ b/composer.json
@@ -6,23 +6,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "bensampo/laravel-enum": "^4.1",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.4",
+        "fruitcake/laravel-cors": "^2.0.5",
+        "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
-        "laravel/breeze": "^1.5",
-        "laravel/framework": "^8.65",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "overtrue/flysystem-qiniu": "~1.0",
-        "overtrue/laravel-lang": "~5.0"
+        "laravel/breeze": "dev-laravel9",
+        "laravel/framework": "^9.0",
+        "laravel/sanctum": "^2.11|dev-develop",
+        "laravel/tinker": "^2.5|dev-develop",
+        "overtrue/flysystem-qiniu": "^2.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
