:package: 安装调试工具

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "overtrue/flysystem-qiniu": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
