--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -15,5 +15,6 @@
     "/js/clipboard/clipboard.min.js": "/js/clipboard/clipboard.min.js",
     "/js/clipboard/index.browser.js": "/js/clipboard/index.browser.js",
     "/js/dragselect/ds.min.js": "/js/dragselect/ds.min.js",
-    "/js/context-js/context-js.js": "/js/context-js/context-js.js"
+    "/js/context-js/context-js.js": "/js/context-js/context-js.js",
+    "/js/echarts/echarts.min.js": "/js/echarts/echarts.min.js"
 }
