--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "copy-image-clipboard": "^2.0.1",
         "deepmerge": "^4.2.2",
         "dragselect": "^2.3.0",
+        "echarts": "^5.2.2",
         "jquery": "^3.6.0",
         "jquery.photoswipe": "^1.1.1",
         "justifiedGallery": "^3.8.1",
@@ -35,7 +36,6 @@
         "sweetalert2": "^11.3.3",
         "tailwindcss": "^3.0.0",
         "toastr": "^2.1.4",
-        "viewerjs": "^1.10.2",
-        "echarts": "^5.2.2"
+        "viewerjs": "^1.10.2"
     }
 }
