:package: 升级至 laravel 9 正式版

--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,19 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
-        "laravel/breeze": "^1.7",
+        "laravel/breeze": "^1.8",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7",
-        "overtrue/flysystem-qiniu": "^2.0"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.0",
-        "phpunit/phpunit": "^9.5.10"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0",
+        "barryvdh/laravel-debugbar": "^3.6"
     },
     "autoload": {
         "psr-4": {
