--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         "laravel/breeze": "^1.8",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-ftp": "^3.0",
+        "league/flysystem-sftp": "^3.0",
+        "thibaud-dauce/flysystem-webdav": "^0.1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
