--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.1.0",
+        "axios": "^0.25",
         "blueimp-canvas-to-blob": "^3.29.0",
         "blueimp-file-upload": "^10.32.0",
         "blueimp-load-image": "^5.16.0",
@@ -28,14 +26,18 @@
         "jquery": "^3.6.0",
         "jquery.photoswipe": "^1.1.1",
         "justifiedGallery": "^3.8.1",
+        "laravel-mix": "^6.0.6",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
+        "lodash": "^4.17.19",
+        "masonry-layout": "^4.2.2",
         "postcss": "^8.2.1",
         "postcss-import": "^14.0.1",
         "resolve-url-loader": "^4.0.0",
         "sweetalert2": "^11.3.3",
         "tailwindcss": "^3.0.0",
         "toastr": "^2.1.4",
-        "viewerjs": "^1.10.2"
+        "viewerjs": "^1.10.2",
+        "imagesloaded": "^4.1.4"
     }
 }
