--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+IGNITION_SHARING_ENABLED=false
