--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -19,5 +19,6 @@
     "/js/context-js/context-js.js": "/js/context-js/context-js.js",
     "/js/echarts/echarts.min.js": "/js/echarts/echarts.min.js",
     "/js/masonry/masonry.pkgd.min.js": "/js/masonry/masonry.pkgd.min.js",
-    "/js/imagesloaded/imagesloaded.pkgd.min.js": "/js/imagesloaded/imagesloaded.pkgd.min.js"
+    "/js/imagesloaded/imagesloaded.pkgd.min.js": "/js/imagesloaded/imagesloaded.pkgd.min.js",
+    "/css/markdown-css/github-markdown.css": "/css/markdown-css/github-markdown.css"
 }
