--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "league/flysystem-sftp": "^3.0",
         "league/flysystem-webdav": "^3.0",
         "overtrue/flysystem-cos": "^5.0",
-        "overtrue/flysystem-qiniu": "^3.0"
+        "overtrue/flysystem-qiniu": "^3.0",
+        "zing/flysystem-oss": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
