--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "intervention/imagecache": "^2.5",
         "laravel/breeze": "^1.8",
         "laravel/framework": "^9.0",
+        "laravel/octane": "^1.2",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
